Done convert component

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -11,7 +11,13 @@ body {
 	min-height: 100vh;
 	overflow: hidden;
 
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
 	background-color: #25252d;
+
+	padding: 20px;
 }
 
 @import url('../components/header/header.less');
